refactoring, deleteTask implemented and tested
